# c2rust_port

./: .gitignore  Cargo.toml  README.md
.cursor/skills/c2rust-port-orchestration/: SKILL.md
scripts/: sync-c-to-rust-skill.sh
skills/c-to-rust-port/: SKILL.md
skills/c-to-rust-port/agents/: openai.yaml
skills/c-to-rust-port/references/: repo-context.md  review-schema.md  rewrite-manifesto.md  roles.md  tools.md
skills/c-to-rust-port/scripts/: behavior-input-plan.sh  ccc-brief.sh  equivalence-ladder.sh  fixture-discovery.sh  gdb-tv-brief.sh  gdb-tv-config-builder.sh  port-snapshot.sh  tracehash-brief.sh  tracehash-scaffold.sh  translation-repair-plan.sh
src/: bench.rs  cli.rs  config.rs  init.rs  inspect.rs  knowledge.rs  lib.rs  main.rs  packets.rs  synthesize.rs
tests/: integration_cli.rs
