[package]
name = "c2rust_port"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "c2rust-port"
path = "src/main.rs"

[dependencies]
anyhow = "1"
camino = { version = "1", features = ["serde1"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = "0.39.2"
sha2 = "0.10"
rusqlite = "0.32.1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
walkdir = "2"
